--- a/deployment/.env
+++ b/deployment/.env
@@ -4,3 +4,4 @@ ALLOWED_HOSTS=["engineering.cd.godjango.dev","localhost","127.0.0.1"]
 CSRF_TRUSTED_ORIGINS=["https://engineering.cd.godjango.dev","http://localhost","http://127.0.0.1"]
 CELERY_BROKER_URL="redis://redis:6379/0"
 CELERY_RESULT_BACKEND="redis://redis:6379/0"
+VITE_BACKEND_URL="https://engineering.cd.godjango.dev/"
